@@ -10,6 +10,7 @@ docs
 
 CuAccessHelper.h
 - Created and syntax errors fixed
+- Added getMemberAsBool()
 
 
 ===================
